--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -22,6 +22,9 @@
             <setting name="sessionIdKey" serializeAs="String">
                 <value />
             </setting>
+            <setting name="firstTimeUse" serializeAs="String">
+                <value>True</value>
+            </setting>
             <setting name="currentPatchVersion2016" serializeAs="String">
                 <value />
             </setting>
@@ -33,6 +36,9 @@
             </setting>
             <setting name="gameVersionString" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="agreedToTOSIteration" serializeAs="String">
+                <value>0</value>
             </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
