--- a/H1EmuLauncher/App.config
+++ b/H1EmuLauncher/App.config
@@ -40,6 +40,9 @@
             <setting name="agreedToTOSIteration" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="developerMode" serializeAs="String">
+                <value>False</value>
+            </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
