fix gamecrash url

--- a/H1EmuLauncher/Resources/CustomClientConfig.ini
+++ b/H1EmuLauncher/Resources/CustomClientConfig.ini
@@ -44,7 +44,7 @@ Address=
 NoUploadFromInit=1
 
 [WebResources]
-GameCrashUrl=https://www.h1emu.com/us/game-error?code=G
+GameCrashUrl=https://www.h1emu.com/game-error?code=G
 
 [WallOfData]
 Collecting=0
