--- a/H1Emu Launcher/App.config
+++ b/H1Emu Launcher/App.config
@@ -43,6 +43,9 @@
             <setting name="developerMode" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="steamEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
         </H1EmuLauncher.Properties.Settings>
     </userSettings>
 </configuration>
