--- a/H1Emu Launcher/Properties/Settings.settings
+++ b/H1Emu Launcher/Properties/Settings.settings
@@ -44,5 +44,8 @@
     <Setting Name="developerMode" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="steamEnabled" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
