Asset Pack Selector
- New system for adding asset packs, works manually at the moment, just missing the logic to check for an update of the selected asset pack automatically

--- a/H1Emu Launcher/App.config
+++ b/H1Emu Launcher/App.config
@@ -2,10 +2,52 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="H1Emu_Launcher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="H1EmuLauncher.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
+        <H1Emu_Launcher.Properties.Settings>
+            <setting name="activeDirectory" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="latestServerVersion" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="publishDate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="patchNotes" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="sessionIdKey" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="firstTimeUse" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="selectedAssetPack" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="imageCarouselVisibility" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="autoMinimise" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="gameVersionString" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="agreedToTOSIteration" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="developerMode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="steamEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </H1Emu_Launcher.Properties.Settings>
         <H1EmuLauncher.Properties.Settings>
             <setting name="activeDirectory" serializeAs="String">
                 <value />
