--- a/H1Emu Launcher/Properties/Settings.settings
+++ b/H1Emu Launcher/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="H1EmuLauncher.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="H1Emu_Launcher.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="activeDirectory" Type="System.String" Scope="User">
@@ -26,8 +26,8 @@
     <Setting Name="firstTimeUse" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
-    <Setting Name="currentPatchVersion2016" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+    <Setting Name="selectedAssetPack" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="imageCarouselVisibility" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
