--- a/H1Emu Launcher/App.config
+++ b/H1Emu Launcher/App.config
@@ -20,6 +20,9 @@
             <setting name="patchNotes" serializeAs="String">
                 <value />
             </setting>
+            <setting name="language" serializeAs="String">
+                <value>0</value>
+            </setting>
             <setting name="sessionIdKey" serializeAs="String">
                 <value />
             </setting>
