--- a/H1Emu Launcher/Properties/Settings.settings
+++ b/H1Emu Launcher/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="language" Type="System.Int32" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">0</Value>
     </Setting>
     <Setting Name="lastServer" Type="System.Int32" Scope="User">
       <Value Profile="(Default)" />
